# mem4ristor-v2

./: .gitignore  CAFE-VIRTUEL-LIMITATIONS.md  CHANGELOG_V3.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  FINAL_SCIENTIFIC_REPORT_V24.md  FINAL_SCIENTIFIC_REPORT_V25.md  FINAL_SCIENTIFIC_REPORT_V26.md  HACKER_GUIDE.md  LICENSE  README.md  VERSION  ai_contributors.json  check_repro.py  check_values.py  debug_test.py  demo_chimera.py  kimi_redteam_prompt.md  pre-commit.sh  pyproject.toml  reproduce_all.py  requirements.txt
archives/: bundle_project.py  dashboard.py  dashboard_premium.py  reproduce_all.py  run_test_debug.py  spice_gen.py
docs/: academic_history.md  adversarial_audit.sh  benchmarks_formulas.md  edison_review_v310.md  preprint.tex  recap_depuis_session_5.md  recap_evolution_sessions_4_6.md  run_audit.sh  scientific_report_v26.md  strategic_report_launch.md  theoretical_anchoring.md  unified_specification_v23.md  visionary_ideas_recap.md
example/: grok_hardware_sim.py
examples/: demo_arena.py  demo_hierarchy.py  demo_inception.py  demo_learning.py  demo_perception.py  demo_swarm.py
experimental/: mem4ristor_king.py
experiments/: attack_resilience.py  benchmark_kuramoto.py  benchmark_variability.py  lyapunov_numerical.py  mem4ristor_test.sp  phase_diagram.py  protocole_bicameral.py  run_spice_test.py  scale_test_10k.py  verify_quick_start.py
failures/: README.md
logs/: failures.txt  test_final.txt  test_out.txt  test_out_final.txt  test_out_full.txt  test_out_v29.txt  test_results.txt  test_snr_out.txt
notebooks/: edison_review_v310.ipynb
(+108 files in other folders)
